fixed overlapping footer and bg on pie chart

--- a/css/custom-theme-2/custom-styles.css
+++ b/css/custom-theme-2/custom-styles.css
@@ -1,3 +1,8 @@
+#main{
+	min-height: 85%;
+	padding-bottom: 20px;
+}
+
 /*Header Intro Styling*/
 
 .demoIntro {
@@ -45,13 +50,8 @@
 	text-align: left;
 }
 
-#summary_table {
-	width: 100%;
-}
-
-#summary_table td{
+#summary_table, #account_status_table td{
 	border-left: 4px solid #95cdd6;
-	text-align: left;
 }
 
 #summary_table td:first-child{
@@ -77,7 +77,7 @@
 
 /*assets table tab*/
 
-#summary_table tbody tr:first-child, #account_status_table tbody tr:first-child, #symbols_table thead tr:first-child, #symbols_table thead th, #lots_div thead th, #settings_table thead th{
+#summary_table tbody tr:first-child, #account_status_table tbody tr:first-child, #symbols_table thead tr:first-child, #symbols_table thead th, #lots_div thead th, #settings_table thead th {
 	background-color: #95cdd6;
 	font-weight: normal;
 	padding: 3px 8px;
